feat(report): 重构报告生成功能，添加交互式 Chart.js 图表
- 移除对外部 PortfolioVisualizer 模块的依赖，改用内置报告生成
- 添加 5 个交互式 Chart.js 图表：
  - 持仓分配饼图
  - 希腊值汇总柱状图
  - Delta 暴露柱状图（按标的）
  - 收益分布直方图（30天模拟）
  - 蒙特卡洛模拟线图（50条路径，含百分位数置信区间）
- 修改报告打开方式：保存为本地文件后使用 file:// URL 打开
- 解决 Blob URL 无法加载外部 CDN 资源的问题
- 添加 tabs 权限以支持在新标签页中打开报告

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -5,7 +5,8 @@
   "description": "Interactive Brokers 账户仓位分析 - 希腊值、蒙特卡洛模拟、风险评估",
   "permissions": [
     "nativeMessaging",
-    "storage"
+    "storage",
+    "tabs"
   ],
   "action": {
     "default_popup": "popup.html",
